# xfce4-kind-plugin

./: .gitignore  AUTHORS  Makefile.am  README.md  THANKS  configure.ac.in
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
panel-plugin/: Makefile.am  kind-config.c  kind-config.h  kind-dialogs.c  kind-dialogs.glade  kind-dialogs.h  kind.c  kind.desktop.in  kind.h  kind_dialog_ui.h
po/: POTFILES.in  POTFILES.skip
