# $Id$

iconsdir = $(datadir)/icons/hicolor/scalable/apps
icons_DATA =								\
	xfce4-kind-plugin.svg						\
	caps_off.svg							\
	caps_on.svg							\
	num_off.svg							\
	num_on.svg							\
	scroll_on.svg							\
	scroll_off.svg							

EXTRA_DIST =								\
	$(icons_DATA)

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
