# $Id$

iconsdir = $(datadir)/icons/hicolor/scalable/apps
icons_DATA =								\
	xfce4-kind-plugin.svg						\
	caps-lock-off.svg							\
	caps-lock-on.svg							\
	num-lock-off.svg							\
	num-lock-on.svg							\
	scroll-lock-on.svg							\
	scroll-lock-off.svg							

EXTRA_DIST =								\
	$(icons_DATA)

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
